wajig (2.0.50) unstable; urgency=low

  [ Tshepang Lekhonkhobe ]

  * VERIFY: Add a check for debsums before running the command, and add
    a Suggests on it.
  * PURGE: use apt-get instead of dpkg, in order to get a yes/no prompt.
  * Remove supression of error messages; Not a good idea.
  * Add dependency on aptitude; It must have been forgotten.
  * SHOW: use aptitude instead of apt-cache
    - the output is prettier
    - better virtual package handling; it displays real packages that provide
      the functionality implied by that virtual package, instead of just
      vomiting "package not found!"
    - only displays info on the installed version; else, the latest available;
      apt-get showed all available versions
    - the trade-off is that the command is a bit slower, but what's the rush :)
  * LIST-RECOMMENDED: new command that displays packages which are
    auto-installed via Recommends, and are without installed dependencies.
    (Closes: #482147)


 -- Graham Williams <Graham.Williams@togaware.com>  Wed, 16 Sep 2010 17:22:16 +1000

wajig (2.0.49) unstable; urgency=low

  [ Tshepang Lekhonkhobe ]

  * UPGRADE: Don't automatically do an "apt-get update" with the backup
    option; the behaviour is not standard, and is not so-damn-fast.

  * UPGRADE: Add command line argument for --backup to specify target
    directory.  * Used to be "wajig --backup upgrade BKDIR".  * Now it's
    "wajig --backup=BKDIR upgrade".

  * UPGRADE: Proceed to upgrade after using -b|--backup option.

  * UPGRADE: Remove the option to install listed packages. This helps
    reduce code complexity.

  * CHANGELOG: Now only displays uninstalled entries by default. This
    makes the hacky NEWS command redundant, which is therefore
    removed. (Closes: #424668).

  * CHANGELOG: Add -v|--verbose=1 option to display the whole thing. This
    was the default option, but suggestion offered in #424668 is more
    sane.
